Wrap results table to prevent page overflow
Instead just make content of the wrapper overflow-x so it gets its own
scroll bar.

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -63,6 +63,10 @@ table {
   }
 }
 
+div#results-wrapper, div#personalrecords-wrapper {
+  overflow-x: scroll;
+}
+
 div.post-content figure {
   img {
     margin: 0 auto;
